--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -1,29 +1,35 @@
 <html lang="pl_PL">
-  <head>
-    <title><%= headTitle %></title>
-    <link rel="stylesheet" href="/css/main.css" />
-  </head>
-  <body>
-    <main>
-      <%- include('partials/navigation', { menuLinks: menuLinks, activeLinkPath:
-      activeLinkPath }); %>
+
+<head>
+  <title>
+    <%= headTitle %>
+  </title>
+  <link rel="stylesheet" href="/css/main.css" />
+</head>
+
+<body>
+  <main>
+    <%- include('partials/navigation', { menuLinks: menuLinks, activeLinkPath: activeLinkPath }); %>
       <h1 class="heading">Add product</h1>
-      <form class="form" action="/products/add" method="POST">
+      <form action="/products/add" method="POST" class="form">
         <div class="form__group">
-          <label class="form__label" for="name">Name</label>
-          <input id="name" class="form__input" type="text" name="name" />
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" required />
         </div>
+
         <div class="form__group">
-          <label class="form__label" for="description"> Description </label>
-          <input
-            id="description"
-            class="form__input"
-            type="text"
-            name="description"
-          />
+          <label for="description">Description</label>
+          <textarea name="description" id="description" required></textarea>
         </div>
-        <button class="button" type="submit">Add</button>
+
+        <div class="form__group">
+          <label for="price">Price</label>
+          <input type="number" name="price" id="price" min="0" step="0.01" required />
+        </div>
+
+        <button type="submit">Add Product</button>
       </form>
-    </main>
-  </body>
+  </main>
+</body>
+
 </html>
