--- a/views/products.ejs
+++ b/views/products.ejs
@@ -8,20 +8,17 @@
       <%- include('partials/navigation', { menuLinks: menuLinks, activeLinkPath:
       activeLinkPath }); %>
       <h1 class="heading">Products</h1>
-      <% if (products?.length > 0) { %>
-      <ul>
-        <% products.forEach(product => { %>
-        <li>
-          Name: <%= product.name %>, Description: <%= product.description %>
-          <a href="/products/<%= product.name %>">Details</a>
-          <button onclick="deleteProduct('<%= product.name %>')">Delete</button>
-        </li>
-        <% }); %>
+      <ul class="products-list">
+        <% if (products && products.length> 0) { %>
+          <% products.forEach(function(product) { %>
+            <li>
+              <%- include('partials/card', { product: product }) %>
+            </li>
+            <% }); %>
+              <% } else { %>
+                <li>No products available.</li>
+                <% } %>
       </ul>
-      <% } else { %>
-      <br />
-      <div>No products available.</div>
-      <% }%>
     </main>
   </body>
   <script>
